--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 
 </head>
 <body>
-    
+    <header>
+
+    </header>
+
+    <main>
+        
+    </main>
+
+    <footer>
+        <p>© 2024 Synera Labs. Todos os direitos reservados.</p>
+    </footer>
 
     <script src="./script/script.js">
 </body>
