--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <p>© 2024 Synera Labs. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="./script/script.js">
+    <script src="./script/script.js"></script>
 </body>
 </html>
