Criado os 3 cads dos devs
criado os cads dos devs vesão mobile 320px funcionando em tela pequena

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synera Labs</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/media-query.css">
     <link rel="shortcut icon" href="./img/Design sem nome.png" type="icon da empresa Synera Labs">
 
 </head>
@@ -38,6 +39,58 @@
                 <li><a href="#" class="text-menu">Contato</a></li>
             </ul>
         </nav>
+
+        <div class="cads">
+            <div class="card1">
+                <div class="foto">
+                    <img src="./img/foto-murilo.svg" alt="Antonio Murilo">
+                </div>
+                <div class="info1">
+                    <p class="nomeMurilo">Antonio Murilo</p>
+                    <p class="tipoDevMurilo">Desenvolvedor FullStack</p>
+                    <div class="tec">
+                        <img class="tecInformadas Java" src="./img/icon-java.svg" alt="Java">
+                    </div>
+                    <div class="tec">
+                        <img class="tecInformadas javaScript" src="./img/icon.javaScript.svg" alt="JavaScript">
+                    </div>
+                </div>
+            </div>
+            <div class="card2">
+                <div class="foto">
+                    <img src="./img/foto-julio.svg" alt="Julio Cesar">
+                </div>
+                <div class="info2">
+                    <p class="nomeJulio">Julio Cesar</p>
+                    <p class="tipoDevJulio">Desenvolvedor FullStack</p>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon-python.svg" alt="Python">
+                    </div>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon-java.svg" alt="Java">
+                    </div>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon-c.svg" alt="C">
+                    </div>
+                </div>
+            </div>
+            <div class="card3">
+                <div class="foto">
+                    <img src="./img/foto-murilo.svg" alt="valdoma Pacheco">
+                </div>
+                <div class="info3">
+                    <p class="nomeValdoma">Valdoma Pacheco</p>
+                    <p class="tipoDevValdoma">Desenvolvedor FullStack</p>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon.javaScript.svg" alt="Python">
+                    </div>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon-java.svg" alt="Java">
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
