coreção de bug de resposividade
o sistema não estáva resposivel para telas muito grandes foi adicionado um container e apartir desse conteiner foi centralizado os elementos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
         </nav>
 
-        <div class="cads">
+        <div class="cards">
             <div class="card1">
                 <div class="foto">
                     <img src="./img/foto-murilo.svg" alt="Antonio Murilo">
@@ -58,6 +58,22 @@
             </div>
             <div class="card2">
                 <div class="foto">
+                    <img src="./img/foto-murilo.svg" alt="valdoma Pacheco">
+                </div>
+                <div class="info3">
+                    <p class="nomeValdoma">Valdoma Pacheco</p>
+                    <p class="tipoDevValdoma">Desenvolvedor FullStack</p>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon.javaScript.svg" alt="Python">
+                    </div>
+                    <div class="tec">
+                        <img class="tecInformadas" src="./img/icon-java.svg" alt="Java">
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="card3">
+                <div class="foto">
                     <img src="./img/foto-julio.svg" alt="Julio Cesar">
                 </div>
                 <div class="info2">
@@ -72,22 +88,6 @@
                     <div class="tec">
                         <img class="tecInformadas" src="./img/icon-c.svg" alt="C">
                     </div>
-                </div>
-            </div>
-            <div class="card3">
-                <div class="foto">
-                    <img src="./img/foto-murilo.svg" alt="valdoma Pacheco">
-                </div>
-                <div class="info3">
-                    <p class="nomeValdoma">Valdoma Pacheco</p>
-                    <p class="tipoDevValdoma">Desenvolvedor FullStack</p>
-                    <div class="tec">
-                        <img class="tecInformadas" src="./img/icon.javaScript.svg" alt="Python">
-                    </div>
-                    <div class="tec">
-                        <img class="tecInformadas" src="./img/icon-java.svg" alt="Java">
-                    </div>
-                    
                 </div>
             </div>
         </div>
