Adicionado sonbra e title do herder
Aqui foi adicionado o titulo para seção e foi adicionado sonbras os cads

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             </ul>
         </nav>
 
+        <h2>
+            Desenvolvedores
+        </h2>
+
         <div class="cards">
             <div class="card1">
                 <div class="foto">
