Adicionado uma animação ao menu
Menu agora tem as cores blue quando se passa o mouse sobre o elemento e acompanha o mouse na troca de elemento

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <li><a href="#" class="text-menu">Sobre Nós</a></li>
                     <li><a href="#" class="text-menu">Serviços</a></li>
                     <li><a href="#" class="text-menu">Contato</a></li>
+                    <span class="laser"></span>
                 </ul>
             </nav>
         </div>
