--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synera Labs</title>
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/media-query.css">
+    <link rel="stylesheet" href="./style/med">
     <link rel="shortcut icon" href="./img/Design sem nome.png" type="icon da empresa Synera Labs">
 
 </head>
@@ -86,7 +86,72 @@
     </header>
 
     <main>
-        
+        <section class="container1">
+            <h2 class="sobre">Sobre a Synera</h2>
+            <p class="sobre-txt">
+                A Synera Labs é uma empresa de tecnologia especializada em  desenvolvimento de 
+                sistemas web, desktop e mobile, oferecendo soluções digitais personalizadas que 
+                impulsionam a transformação tecnológica de negócios.
+            </p>
+            <p class="sobre-txt">
+                Nosso propósito é mordenizar processos, otimizar a produtividade e aprimorar a 
+                experiência do usuário por meio de produtos inovadores, seguros e de alta perfomece.
+            </p>
+            <p class="sobre-txt">
+                Com uma equipe altamente qualificada e apaixonada por inovação, a Synera Labs une
+                design,  tecnologia e estratégia para entregar soluções escaláveis, eficiente e alinhadas 
+                a cada cliente.
+            </p>
+            <p class="sobre-txt">
+                Mais do que desenvolver software, criamos  valor por meio de tecnologia ajudando 
+                empresas e empreendendores a alcançar novos patamares de competitividade e 
+                excelência digital
+            </p>
+        </section>
+        <section class="container2">
+            <h2 class="tecUsadas">Tecnologias que Usamos</h2>
+
+            <div class="container-slid">
+
+                <button class="prev-btn">&#10094;</button>
+
+                <div class="slides">
+                    <div class="img-cads">
+                        <img class="icon-tec" src="./img/icon-java.svg" alt="Java">
+                        <p class="title-tec">Java</p>
+                        <p class="desc">
+                            Desenvolvimento de 
+                            Aplicações
+                        </p>
+                    </div>
+                    <div class="img-cads">
+                        <img class="icon-tec" src="./img/icon-python.svg" alt="Python">
+                        <p class="title-tec">Python</p>
+                        <p class="desc">
+                            Automação de tarefas
+                        </p>
+                    </div>
+                    <div class="img-cads">
+                        <img class="icon-tec" src="./img/icon.javaScript.svg" alt="JavaScript">
+                        <p class="title-tec">JavaScript</p>
+                        <p class="desc">
+                            interstividade
+                        </p>
+                    </div>
+                    <div class="img-cads">
+                        <img class="icon-tec" src="./img/icon-c.svg" alt="C">
+                        <p class="title-tec">JavaScript</p>
+                        <p class="desc">
+                            interstividade
+                        </p>
+                    </div>
+                </div>
+                <button class="next-btn">&#10095;</button>
+            </div>
+        </section>
+        <section class="container3">
+
+        </section>
     </main>
 
     <footer>
