--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </p>
         </section>
         <section class="container2">
-            <h2 class="tecUsadas">Tecnologias que Usamos</h2>
+            <h2 class="tecUsadas">Tecnologias adotadas</h2>
 
             <div class="container-slid">
 
