--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
         </section>
         <section class="container2">
             <h2 class="tecUsadas">Tecnologias adotadas</h2>
-
+            
+            <button class="prev-btn">&#10094;</button>
             <div class="container-slid">
-
-                <button class="prev-btn">&#10094;</button>
 
                 <div class="slides">
                     <div class="img-cads">
@@ -140,14 +139,15 @@
                     </div>
                     <div class="img-cads">
                         <img class="icon-tec" src="./img/icon-c.svg" alt="C">
-                        <p class="title-tec">JavaScript</p>
+                        <p class="title-tec">C</p>
                         <p class="desc">
-                            interstividade
+                            Desenvolvimento de Aplicações
                         </p>
                     </div>
                 </div>
-                <button class="next-btn">&#10095;</button>
+                
             </div>
+            <button class="next-btn">&#10095;</button>
         </section>
         <section class="container3">
 
