--- a/index.html
+++ b/index.html
@@ -206,7 +206,13 @@
     </main>
 
     <footer>
-        
+        <div class="container-footer">
+            <div class="column">
+                <div class="columns">
+                    <h3>social</h3>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="./script/script.js"></script>
