--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
             <div class="column">
                 <div class="columns">
                     <h3>social</h3>
+                    <h3>contato</h3>
+                    <h3>Regras</h3>
                 </div>
             </div>
         </div>
