Adicionado um background ao menu
Adicionado um bacground ao menu deixando ele melhkor visivel para os ususarios

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <li><a href="#cont1" class="text-menu">Sobre Nós</a></li>
                     <li><a href="#cont2" class="text-menu">Serviços</a></li>
                     <li><a href="#footer" class="text-menu">Contato</a></li>
+                    <li><a href="" class="text-menu">Login</a></li>
                     <span class="laser"></span>
                 </ul>
             </nav>
