--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                 <div class="container-slid2">
                     <div class="slides2">
                         <div class="cards-projects">
-                            <h3>PetShopEstoque</h3>
-                            <p>Tcnologias: Java</p>
+                            <h3 class="titleProject">PetShopEstoque</h3>
+                            <p class="steckused">Tcnologias: Java</p>
                             <p> 
                                 Duração 1 ano
                                 Controle de estoque 
@@ -176,8 +176,8 @@
                             </p>
                         </div>
                         <div class="cards-projects">
-                            <h3>PetShopEstoque</h3>
-                            <p>Tcnologias: Java</p>
+                            <h3 class="titleProject">PetShopEstoque</h3>
+                            <p class="steckused">Tcnologias: Java</p>
                             <p> 
                                 Duração 1 ano
                                 Controle de estoque 
@@ -186,8 +186,8 @@
                             </p>
                         </div>
                         <div class="cards-projects">
-                            <h3>PetShopEstoque</h3>
-                            <p>Tcnologias: Java</p>
+                            <h3 class="titleProject">PetShopEstoque</h3>
+                            <p class="steckused">Tcnologias: Java</p>
                             <p> 
                                 Duração 1 ano
                                 Controle de estoque 
@@ -212,16 +212,16 @@
                 <div class="columns">
                     <div class="Contato">
                         <h3 class="titles-footer">Contato</h3>
-                        <a class="fot-links contato whatsapp" href="">(73) 99822-2893</a>
-                        <a class="fot-links contato Instagram" href="">syneralabs@gmail.com</a>
+                        <a class="fot-links contato whatsapp" href="https://api.whatsapp.com/message/NO5BVWJDWKUYN1?autoload=1&app_absent=0" target="_blank">(73) 99822-2893</a>
+                        <a class="fot-links contato Email" href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=new" target="_blank">syneralabs@gmail.com</a>
                     </div>
                     <div class="Sociais">
                         <h3 class="titles-footer">Redes Sociais</h3>
-                        <a class="fot-links instagram" href="">Instagram</a>
+                        <a class="fot-links instagram" href="https://www.instagram.com/syneralabs/" target="_blank">Instagram</a>
                     </div>
                     <div class="Legal">
                         <h3 class="titles-footer">Legal</h3>
-                        <a class="fot-links" href="">Termos</a>
+                        <a class="fot-links" href="" target="_blank">Termos</a>
                     </div>
                     
                     
