--- a/projetosistemaback/public/login.html
+++ b/projetosistemaback/public/login.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Página de Login /Synera Labs </title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../../style/style.css" />
 
     </head>
 <body>
