--- a/projetosistemaback/public/login.html
+++ b/projetosistemaback/public/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="../../img/Design sem nome.png" type="image/x-icon">
     <title>Login</title>
     <link rel="stylesheet" href="../../style/style2.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
