Adição de arquivos
Adicionado arquivos a estrutura

--- a/projetosistemaback/public/menu.html
+++ b/projetosistemaback/public/menu.html
@@ -1,24 +1,14 @@
-<!--criar o menu de serviços -->
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Menu de Serviços /Synera Labs </title>
-    <link rel="stylesheet" href="styles.css" />
-
-    </head>
+    <link rel="shortcut icon" href="../../img/Design sem nome.png" type="image/x-icon">
+    <link rel="stylesheet" href="../../style/style3.css">
+    <title>Document</title>
+</head>
 <body>
-    <div class="container menu-container">
-        <h1>Menu de Serviços</h1>
-        <div id="serviços" class="lista-seriços">
-            <!-- Aqui estarão listados os serviços oferecidos --(espero rsrs) -->
-    </div>
-
-    <button onclick="logout()">Sai</button>
-    </div>
-
-  <script src="script.js"></script>
-  </body>
+    
+    <script src="../../script/script.js"></script>
+</body>
 </html>
