css cards e html
Adicionado o css e html funcional para os cards de compras de planos

--- a/projetosistemaback/public/menu.html
+++ b/projetosistemaback/public/menu.html
@@ -8,6 +8,57 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="card-group">
+        <div class="container0">
+            <div class="card">
+                <p>PARA SUA EMPRESA</p>
+                <div class="planos">
+                    <h2>Essentials</h2>
+                    <span class="notamate">R$ <span class="valor1">19.97</span>Vitalicio</span>
+                </div>
+                <button class="button0">Compre Agora</button>
+                <hr>
+                <ul>
+                    <li>Paginas estaticas</li>
+                    <li>Design nosso ou seu</li>
+                </ul>
+            </div>
+        </div> <!--container0-->
+        <div class="container1">
+            <div class="card">
+                <p>PARA SUA EMPRESA</p>
+                <div class="planos">
+                    <h2>ultimate</h2>
+                    <span class="notamate">R$ <span class="valor1">19.97</span>Vitalicio</span>
+                </div>
+                <button class="button0">Compre Agora</button>
+                <hr>
+                <ul>
+                    <li>Usuários ilimitados</li>
+                    <li>Suporte 24/7</li>
+                    <li>CSM Dedicado</li>
+                    <li>Treinamentos</li>
+                </ul>
+            </div>
+        </div><!--container1-->
+        <div class="container2">
+            <div class="card">
+                <p>PARA SUA EMPRESA</p>
+                <div class="plano">
+                    <h2 class="titulo0">Emterprise</h2>
+                </div>
+                
+                <button class="button0">assinar agora</button>
+                <hr>
+                <ul>
+                    <li class="regular-icon6">
+                        Plano Customizado especialmente para  a necessidade de seu negocio
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     
     <script src="../../script/script.js"></script>
 </body>
