--- a/projetosistemaback/public/menu.html
+++ b/projetosistemaback/public/menu.html
@@ -15,7 +15,7 @@
                 <p>PARA SUA EMPRESA</p>
                 <div class="planos">
                     <h2>Essentials</h2>
-                    <span class="notamate">R$ <span class="valor1">19.97</span>Vitalicio</span>
+                    <span class="notamate">R$ <span class="valor1">3.000</span>Vitalicio</span>
                 </div>
                 <button class="button0">Compre Agora</button>
                 <hr>
@@ -30,15 +30,16 @@
                 <p>PARA SUA EMPRESA</p>
                 <div class="planos">
                     <h2>ultimate</h2>
-                    <span class="notamate">R$ <span class="valor1">19.97</span>Vitalicio</span>
+                    <span class="notamate">R$ <span class="valor1">7.000</span>Vitalicio</span>
                 </div>
                 <button class="button0">Compre Agora</button>
                 <hr>
                 <ul>
-                    <li>Usuários ilimitados</li>
+                    <li>Banco de dados </li>
                     <li>Suporte 24/7</li>
-                    <li>CSM Dedicado</li>
-                    <li>Treinamentos</li>
+                    <li>Paginas dinamicas</li>
+                    <li>Treinamentos de uso de sistema</li>
+                    <li>todos os tipos de aplicação</li>
                 </ul>
             </div>
         </div><!--container1-->
