--- a/projetosistemaback/public/menu.html
+++ b/projetosistemaback/public/menu.html
@@ -20,8 +20,8 @@
                 <button class="button0">Compre Agora</button>
                 <hr>
                 <ul>
-                    <li>Paginas estaticas</li>
-                    <li>Design nosso ou seu</li>
+                    <li><span class="left-espace">Paginas estaticas</span></li>
+                    <li><span class="left-espace">Design nosso ou seu</span></li>
                 </ul>
             </div>
         </div> <!--container0-->
@@ -35,11 +35,11 @@
                 <button class="button0">Compre Agora</button>
                 <hr>
                 <ul>
-                    <li>Banco de dados </li>
-                    <li>Suporte 24/7</li>
-                    <li>Paginas dinamicas</li>
-                    <li>Treinamentos de uso de sistema</li>
-                    <li>todos os tipos de aplicação</li>
+                    <li><span class="left-espace">Banco de dados</span></li>
+                    <li><span class="left-espace">Suporte 24/7</span></li>
+                    <li><span class="left-espace">Paginas dinamicas</span></li>
+                    <li><span class="left-espace">Treinamentos de uso de sistema</span></li>
+                    <li><span class="left-espace">todos os tipos de aplicação</span></li>
                 </ul>
             </div>
         </div><!--container1-->
@@ -50,11 +50,11 @@
                     <h2 class="titulo0">Emterprise</h2>
                 </div>
                 
-                <button class="button0">assinar agora</button>
+                <button class="button0">Compre Agora</button>
                 <hr>
                 <ul>
                     <li class="regular-icon6">
-                        Plano Customizado especialmente para  a necessidade de seu negocio
+                        <span class="left-espace">Plano Customizado especialmente para  a necessidade de seu negocio</span> 
                     </li>
                 </ul>
             </div>
