--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <ul class="esconder">
                     <li><a href="#content-herder" class="text-menu">Home</a></li>
                     <li><a href="#cont1" class="text-menu">Sobre Nós</a></li>
-                    <li><a href="#cont2" class="text-menu">Serviços</a></li>
+                  <li><a href="./projetosistemaback/public/services.html" class="text-menu">Serviços</a></li>
+                 <!--<li><a href="#cont2" class="text-menu">Serviços</a></li> (deixei comentado caso não concorde  murilo)-->
                     <li><a href="#footer" class="text-menu">Contato</a></li>
                     <li><a href="./projetosistemaback/public/login.html" class="text-menu">Login</a></li>
                     <span class="laser"></span>
