css e html corrigidos

--- a/index.html
+++ b/index.html
@@ -110,48 +110,99 @@
                 excelência digital
             </p>
         </section>
-        <section class="container2">
-            <h2 class="tecUsadas">Tecnologias que Usamos</h2>
+        <section class="container2" id="cont2">
+            <h2 class="tecUsadas">Tecnologias adotadas</h2>
 
-            <div class="container-slid">
+            <div class="carrossel">
 
-                <button class="prev-btn">&#10094;</button>
+                <button class="prev-btn">
+                    <img src="./img/icon-prev.svg" alt="Anterior">
+                </button>
 
-                <div class="slides">
-                    <div class="img-cads">
-                        <img class="icon-tec" src="./img/icon-java.svg" alt="Java">
-                        <p class="title-tec">Java</p>
-                        <p class="desc">
-                            Desenvolvimento de 
-                            Aplicações
-                        </p>
-                    </div>
-                    <div class="img-cads">
-                        <img class="icon-tec" src="./img/icon-python.svg" alt="Python">
-                        <p class="title-tec">Python</p>
-                        <p class="desc">
-                            Automação de tarefas
-                        </p>
-                    </div>
-                    <div class="img-cads">
-                        <img class="icon-tec" src="./img/icon.javaScript.svg" alt="JavaScript">
-                        <p class="title-tec">JavaScript</p>
-                        <p class="desc">
-                            interstividade
-                        </p>
-                    </div>
-                    <div class="img-cads">
-                        <img class="icon-tec" src="./img/icon-c.svg" alt="C">
-                        <p class="title-tec">JavaScript</p>
-                        <p class="desc">
-                            interstividade
-                        </p>
+                <div class="container-slid">
+                    <div class="slides">
+
+                        <div class="img-cads">
+                            <img class="icon-tec" src="./img/icon-java.svg" alt="Java">
+                            <p class="title-tec">Java</p>
+                            <p class="desc">Desenvolvimento de Aplicações</p>
+                        </div>
+
+                        <div class="img-cads">
+                            <img class="icon-tec" src="./img/icon-python.svg" alt="Python">
+                            <p class="title-tec">Python</p>
+                            <p class="desc">Automação de tarefas</p>
+                        </div>
+
+                        <div class="img-cads">
+                            <img class="icon-tec" src="./img/icon.javaScript.svg" alt="JavaScript">
+                            <p class="title-tec">JavaScript</p>
+                            <p class="desc">Interatividade</p>
+                        </div>
+
+                        <div class="img-cads">
+                            <img class="icon-tec" src="./img/icon-c.svg" alt="C">
+                            <p class="title-tec">C</p>
+                            <p class="desc">Desenvolvimento de Aplicações</p>
+                        </div>
+
                     </div>
                 </div>
-                <button class="next-btn">&#10095;</button>
+
+        
+                <button class="next-btn">
+                    <img src="./img/icon-next.svg" alt="Próximo">
+                </button>
+
             </div>
         </section>
-        <section class="container3">
+        <section class="container3" id="cont3">
+            <h2 class="project">Nossos Projetos</h2>
+
+            <div class="carrossel">
+                <button class="prev-btn prev">
+                    <img src="./img/icon-prev.svg" alt="Prev">
+                </button>
+
+                <div class="container-slid2">
+                    <div class="slides2">
+                        <div class="cards-projects">
+                            <h3 class="titleProject">PetShopEstoque</h3>
+                            <p class="steckused">Tcnologias: Java</p>
+                            <p> 
+                                Duração 1 ano
+                                Controle de estoque 
+                                com gereciamento de 
+                                funcionarios
+                            </p>
+                        </div>
+                        <div class="cards-projects">
+                            <h3 class="titleProject">PetShopEstoque</h3>
+                            <p class="steckused">Tcnologias: Java</p>
+                            <p> 
+                                Duração 1 ano
+                                Controle de estoque 
+                                com gereciamento de 
+                                funcionarios
+                            </p>
+                        </div>
+                        <div class="cards-projects">
+                            <h3 class="titleProject">PetShopEstoque</h3>
+                            <p class="steckused">Tcnologias: Java</p>
+                            <p> 
+                                Duração 1 ano
+                                Controle de estoque 
+                                com gereciamento de 
+                                funcionarios
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="next-btn next">
+                    <img src="./img/icon-next.svg" alt="Next">
+                </button>
+            </div>
 
         </section>
     </main>
