--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
                 </svg>
 
                 </button>
-                <ul class="esconder">
+                <ul class="esconder menu">
                     <li><a href="#content-herder" class="text-menu">Home</a></li>
                     <li><a href="#cont1" class="text-menu">Sobre Nós</a></li>
-                  <li><a href="./projetosistemaback/public/services.html" class="text-menu">Serviços</a></li>
+                    <li><a href="./projetosistemaback/public/services.html" class="text-menu">Serviços</a></li>
                     <li><a href="#footer" class="text-menu">Contato</a></li>
+                    <li><a href="./projetosistemaback/public/pagamento.html" class="text-menu">Pagamento</a></li>
                     <li><a href="./projetosistemaback/public/login.html" class="text-menu">Login</a></li>
                     <span class="laser"></span>
                 </ul>
