validação de cadastro
foi adicionado duas validações de cadastro para que o sistema não aceite o mesmo email fazer dois cadastros o mesmo com cpf

--- a/projetosistemaback/public/login.html
+++ b/projetosistemaback/public/login.html
@@ -52,7 +52,7 @@
                         <input type="email" placeholder="Email" name="email" required>
                     </label>
                     
-                    <label class="label-input" for="password">
+                    <label class="label-input" for="senha">
                         <i class="fas fa-lock icon-modify"></i>
                         <input type="password" placeholder="Password" name="senha" required>
                     </label>
