Adicionado menu de asinaturas

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                 <ul class="esconder menu">
                     <li><a href="#content-herder" class="text-menu">Home</a></li>
                     <li><a href="#cont1" class="text-menu">Sobre Nós</a></li>
-                    <li><a href="./projetosistemaback/public/services.html" class="text-menu">Serviços</a></li>
                     <li><a href="#footer" class="text-menu">Contato</a></li>
+                    <li><a href="./projetosistemaback/public/services.html" class="text-menu">Serviços</a></li>
                     <li><a href="./projetosistemaback/public/pagamento.html" class="text-menu">Pagamento</a></li>
+                    <li><a href="./projetosistemaback/public/menu.html" class="text-menu">Menu de Asinaturas</a></li>
                     <li><a href="./projetosistemaback/public/login.html" class="text-menu">Login</a></li>
                     <span class="laser"></span>
                 </ul>
