--- a/projetosistemaback/public/menu.html
+++ b/projetosistemaback/public/menu.html
@@ -48,6 +48,7 @@
                 <p>PARA SUA EMPRESA</p>
                 <div class="plano">
                     <h2 class="titulo0">Emterprise</h2>
+                    <span class="notamate"><span class="valor1">Valor a combinar</span></span>
                 </div>
                 
                 <button class="button0">Compre Agora</button>
